# tgbot-template

./: .gitignore  README.md  alembic.ini  bot.py  example.docker-compose.yaml  example.env  main.py  pyproject.toml  requirements.txt
Visual Studio 2022/: FileName.cpp
migrations/: env.py
migrations/versions/: 9fbc09e15197_init_db.py
systemd/: tgbot.service
tgbot/data/: config.py  config_reader.py  sql.py
tgbot/handlers/: common.py  main_menu.py
tgbot/models/: config_reader.py
tgbot/services/: repository.py
tgbot/services/crud/: user.py
tgbot/utils/: logging.py
