[tool.poetry]
name = "tgbot"
version = "0.1.0"
description = ""
authors = ["3x0d2s-pc <exodus.yarwood@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^4.5.5"
asyncpg = "^0.27.0"
loguru = "^0.7.0"
aiohttp = {extras = ["speedups"], version = "^3.8.4"}
aiogram = {version = "^3.0.0b7", allow-prereleases = true}
sqlalchemy = "^2.0.16"
alembic = "^1.11.1"
pydantic = {extras = ["dotenv"], version = "^1.10.9"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
